# servo_motor_simulation

./: .gitignore  LICENSE.txt  README.md  generate_torque  run_conveyor_simu  run_motor
devel/: .catkin  .rosinstall  setup.sh
devel/include/dobot/: ClearAllAlarmsStateRequest.h  ClearAllAlarmsStateResponse.h  ContMotorControl.h  ContMotorControlRequest.h  ContMotorControlResponse.h  GenerateAbnormalTorque.h  GenerateAbnormalTorqueRequest.h  GenerateAbnormalTorqueResponse.h  GenerateNormalTorque.h  GenerateNormalTorqueRequest.h  GenerateNormalTorqueResponse.h  GetARCParamsRequest.h  GetARCParamsResponse.h  GetAlarmsStateRequest.h  GetAlarmsStateResponse.h  GetCPParamsRequest.h  GetCPParamsResponse.h  GetColorSensor.h  GetColorSensorRequest.h  GetColorSensorResponse.h  GetDeviceNameRequest.h  GetDeviceNameResponse.h  GetDeviceSNRequest.h  GetDeviceSNResponse.h  GetDeviceVersionRequest.h  GetDeviceVersionResponse.h  GetEndEffectorGripperRequest.h  GetEndEffectorGripperResponse.h  GetEndEffectorLaserRequest.h  GetEndEffectorLaserResponse.h  GetEndEffectorParamsRequest.h  GetEndEffectorParamsResponse.h  GetEndEffectorSuctionCupRequest.h  GetEndEffectorSuctionCupResponse.h  GetHOMEParamsRequest.h  GetHOMEParamsResponse.h  GetIOADCRequest.h  GetIOADCResponse.h  GetIODIRequest.h  GetIODIResponse.h  (+114 more)
devel/lib/dobot/: conveyor_belt_agent  simulation_servo_agent  simulation_servo_agent_no_noise
devel/lib/pkgconfig/: dobot.pc
devel/lib/python2.7/dist-packages/dobot/msg/: __init__.py  _motor_data.py  _motor_raw_data.py  _pid_control_data.py
devel/lib/python2.7/dist-packages/dobot/srv/: _ContMotorControl.py  _GenerateAbnormalTorque.py  _GenerateNormalTorque.py  _GetColorSensor.py  _GetInfraredSensor.py  _GetPose.py  _InitConveyorBeltAgent.py  _InitMotorControlApp.py  _OneTimeMotorControl.py  _ReadReg.py  _SetColorSensor.py  _SetDynamixelSpeed.py  _SetEMotor.py  _SetEndEffectorSuctionCup.py  _SetInfraredSensor.py  _SetPTPCmd.py  _SetWAITCmd.py  _WriteReg.py  __init__.py
devel/share/common-lisp/ros/dobot/msg/: _package.lisp  _package_motor_data.lisp  _package_motor_raw_data.lisp  _package_pid_control_data.lisp  dobot-msg.asd  motor_data.lisp  motor_raw_data.lisp  pid_control_data.lisp
devel/share/common-lisp/ros/dobot/srv/: ContMotorControl.lisp  GenerateAbnormalTorque.lisp  GenerateNormalTorque.lisp  GetColorSensor.lisp  (+27 more)
devel/share/dobot/cmake/: dobot-msg-extras.cmake  dobot-msg-paths.cmake  dobotConfig.cmake
devel/share/roseus/ros/dobot/: manifest.l
src/dobot/: CMakeLists.txt  package.xml
src/dobot/backup/: CMakeLists.txt
src/dobot/include/DobotDll_rpi/: libDobotDll.so.1.0.0
src/dobot/include/DobotDll_x64/: DobotDll.h  DobotType.h
src/dobot/include/conveyor_belt_agent/: ConveyorBeltAgent.h
src/dobot/include/conveyor_gateway/: ConveyorGateway.h
src/dobot/launch/: launch.sh  launch_no_noise.sh  motor.launch  simu.launch  simu_no_noise.launch
src/dobot/msg/: motor_data.msg  motor_raw_data.msg  pid_control_data.msg
src/dobot/src/: .~lock.motor_data.csv#  motor_data.csv  motor_plot.py
src/dobot/src/conveyor_belt_agent/: ConveyorBeltAgent.cpp  ConveyorBeltAgentNode.cpp
src/dobot/src/conveyor_gateway/: ConveyorGateway.cpp  ConveyorGatewayNode.cpp
src/dobot/src/conveyor_server_agent/: ConveyorServerAgent.py
src/dobot/src/dynamixel_servo_agent/: __init__.py  dynamixel_servo_agent.py  dynamixel_servo_agent_acs723.py  dynamixel_servo_agent_ina169.py  dynamixel_usb_test.py  ina219.py  xl430.py  xlConst.py
src/dobot/src/simulation_motor_matlab/: README.md  V_P_T_simulation.m  best_params.mat  best_params.txt  calc_err.m  calc_err_kr.m  max_torque_at_given_speed_test.m  multi_speed_simulation.m  parameter_twiddle_fast.m  parameter_twiddle_fast_kr.m  simulation_servo_agent.slx  simulation_servo_agent_1219.slx  simulation_servo_agent_no_noise.slx  simulation_servo_agent_no_noise.tgz  simulation_servo_agent_noise.tgz
src/dobot/src/simulation_motor_matlab/dobot/: package.xml
src/dobot/src/simulation_motor_matlab/dobot/msg/: motor_data.msg
src/dobot/src/simulation_motor_matlab/matlab_gen/jar/: dobot-1.1.01.md5
src/dobot/src/simulation_motor_matlab/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
src/dobot/src/simulation_motor_matlab/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+dobot/: motor_data.m  motor_raw_data.m
src/dobot/src/simulation_servo_agent/: _ne_ds.h  ex_04d5441d.c  ex_136645f8.c  ex_2ebcd5b2.c  ex_40d5be33.c  ex_436c54cf.c  ex_47b11894.c  ex_53ba9332.c  ex_5d6f13be.c  ex_690b7cd0.c  ex_79d100f1.c  ex_bb0efd4b.c  ex_d4b33b97.c  ex_e40d74b8.c  ex_f3b1cdf6.c  ex_f866102d.c  mc_110e6c6c.c  mc_15d12d95.c  mc_15d828ca.c  mc_220ba961.c  mc_2565d6e0.c  mc_2a642f54.c  mc_2a6a9b24.c  mc_2cdc96b4.c  mc_32d501e3.c  mc_32dc008a.c  mc_3b6a945d.c  mc_4105189f.c  mc_4c6117e3.c  mc_51d4094e.c  mc_52623861.c  mc_59b6e413.c  mc_630208f8.c  mc_67da4f41.c  mc_6b6d311a.c  mc_6fb1c336.c  mc_7a613aec.c  mc_7bbf41f0.c  mc_7d099de7.c  mc_89d597cf.c  (+119 more)
src/dobot/src/simulation_servo_agent_no_noise/: _nesl_rtw.h  defines.txt  ert_main.cpp  ex_076caee1.c  ex_09b84ed2.c  ex_18b4440a.c  ex_316a81de.c  ex_8a6fc761.c  ex_b2b40ad5.c  ex_b7b137d8.c  ex_debffef2.c  external_std.h  lang_std.h  mc_026e4f4b.c  mc_03b98f6f.c  mc_0bd30dee.c  mc_0d6fd085.c  mc_0ed73c49.c  mc_11086079.c  mc_2bbf87e3.c  mc_3e66abdf.c  mc_47b8cebe.c  mc_47b91db1.c  mc_4b0301c6.c  mc_52688a58.c  mc_53b1fc84.c  mc_550847c3.c  mc_5766048f.c  mc_5d65cd86.c  mc_630dda0e.c  mc_67da200d.c  mc_6e61d16c.c  mc_7cd58f0b.c  mc_7cdbe436.c  mc_7d0547c8.c  mc_7eb21b39.c  mc_81b0ada5.c  mc_81b5717e.c  mc_870ec75e.c  mc_a3b90582.c  (+109 more)
src/dobot/srv/: ContMotorControl.srv  ContPickAndPlace.srv  GenerateAbnormalTorque.srv  GenerateNormalTorque.srv  GetColorSensor.srv  GetPose.srv  MotorControl.srv  OneTimeMotorControl.srv  OneTimePickAndPlace.srv  PickAndPlace.srv  ReadReg.srv  SetColorSensor.srv  SetEMotor.srv  SetInfraredSensor.srv  SetMotorSpeed.srv  SetWAITCmd.srv  WriteReg.srv
src/dobot/test_websocket/: client_test.py  conveyorBelt_1.json  conveyorBelt_2.json  currentSensor.json  readme_socketInt.md
(+44 files in other folders)
